# rrr

./: Cargo.toml  README.md
.github/workflows/: rust.yml
benches/: benches.rs
cddl/: cose.cddl  fragment.cddl  kdf_usage.cddl  record.cddl  registry.cddl  segment.cddl
src/: bin.rs  cbor.rs  error.rs  lib.rs  record.rs  registry.rs  segment.rs  serde_utils.rs
src/cmd/: mod.rs
src/crypto/: encryption.rs  mod.rs  signature.rs
src/crypto/kdf/: hkdf.rs  mod.rs
src/crypto/password_hash/: argon2.rs  mod.rs
src/owned/: mod.rs  record.rs  registry.rs
src/record/: key.rs  mod.rs  path.rs  segment.rs
src/utils/: fd_lock.rs  mod.rs  newtype.rs  serde.rs
tests/: cddl.proptest-regressions  cddl.rs  test.proptest-regressions  test.rs  util.rs
