[package]
name = "rrr"
description = "Implementation of the Recursive Record Registry data format"
version = "0.1.0"
edition = "2021"

[lib]
name = "rrr"
path = "src/lib.rs"

[[bin]]
name = "rrr"
path = "src/bin.rs"

[dependencies]
aes-gcm = { version = "0.10.3", features = ["std"] }
argon2 = { version = "0.5.3", features = ["zeroize", "std"] }
async-fd-lock = "0.2.0"
async-scoped = { version = "0.9.0", features = ["use-tokio"] }
async-trait = "0.1.80"
bytemuck = { version = "1.16.0", features = ["min_const_generics", "must_cast", "derive"] }
casey = "0.4.0"
chrono = { version = "0.4", features = ["arbitrary"] }
ciborium-io = { version = "^0.2.0", features = ["std"] }
clap = { version = "4.5", features = ["derive"] }
color-eyre = "0.6.3"
coset = { version = "0.3.7", features = ["std"] }
derive_more = "0.99.17"
ed25519-dalek = { version = "2.1.1", features = ["rand_core", "pem"] }
futures = "0.3.30"
hex = "0.4.3"
hex-buffer-serde = { version = "0.4.0", features = ["const_len"] }
hkdf = { version = "0.12.4", features = ["std"] }
indexmap = "2.2.6"
itertools = "0.13.0"
proptest = "1.5.0"
proptest-arbitrary-interop = "0.1.0"
proptest-derive = "0.5.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_bytes = "0.11.14"
serde_with = "3.8.1"
sha2 = "0.10.8"
static_assertions = "1.1.0"
thiserror = "1.0.61"
tokio = { version = "1.37", features = ["full"] }
tokio-util = { version = "0.7.11", features = ["io-util"] }
toml = { version = "0.8.14", features = ["preserve_order"] }
tracing = "0.1.40"
zeroize = { version = "1.8.1", features = ["zeroize_derive"] }

[dev-dependencies]
cddl = "0.9.4"
criterion = { version = "0.5.1", features = ["async_tokio"] }
criterion-macro = "0.4.0"
tempfile = "3.10.1"
test-strategy = "0.3.1"
tracing-test = { version = "0.2.5", features = ["no-env-filter"] }

[[bench]]
name = "benches"
