[package]
name = "rrr"
description = "Implementation of the Recursive Record Registry data format"
version = "0.1.0"
edition = "2021"

[lib]
name = "rrr"
path = "src/lib.rs"

[[bin]]
name = "rrr"
path = "src/bin.rs"
required-features = ["cmd"]

[features]
cmd = [
    "dep:cbor-diag",
    "dep:clap",
    "dep:color-eyre",
    "dep:hex",
    "dep:tracing-error",
    "dep:tracing-subscriber",
]

[dependencies]
aes-gcm = { version = "0.10.3", features = ["std"] }
argon2 = { version = "0.5.3", features = ["zeroize", "std"] }
async-fd-lock = "0.2.0"
async-scoped = { version = "0.9.0", features = ["use-tokio"] }
async-trait = "0.1.80"
casey = "0.4.0"
chrono = { version = "0.4", features = ["arbitrary"] }
ciborium-io = { version = "^0.2.0", features = ["std"] }
coset = { version = "0.3.7", features = ["std"] }
derive_more = { version = "2.0", features = ["full"] }
ed25519-dalek = { version = "2.1", features = ["rand_core", "pem"] }
futures = "0.3.30"
hex-buffer-serde = { version = "0.4.0", features = ["const_len"] }
hkdf = { version = "0.12.4", features = ["std"] }
indexmap = "2.2"
itertools = "0.14.0"
proptest = "1.5"
proptest-arbitrary-interop = "0.1.0"
proptest-derive = "0.5.0"
rand = "=0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_with = "3.8"
sha2 = "0.10.8"
test-strategy = "0.4.0"
thiserror = "2.0"
tokio = { version = "1.37", features = ["full"] }
tokio-util = { version = "0.7.11", features = ["io-util"] }
tracing = "0.1.40"
zeroize = { version = "1.8", features = ["zeroize_derive"] }

# Conditionally enabled dependencies
cbor-diag = { version = "0.1.12", optional = true }
clap = { version = "4.5", features = ["derive"], optional = true }
color-eyre = { version = "0.6.3", optional = true }
hex = { version = "0.4.3", optional = true }
tracing-error = { version = "0.2.0", optional = true }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"], optional = true }

[dev-dependencies]
cddl = "0.9.4"
criterion = { version = "0.5.1", features = ["async_tokio"] }
criterion-macro = "0.4.0"
tempfile = "3.10"
tracing-test = { version = "0.2.5", features = ["no-env-filter"] }

[[bench]]
name = "benches"
